--- a/sass/pages/_services.scss
+++ b/sass/pages/_services.scss
@@ -56,12 +56,11 @@
 
   @media screen and (min-width: 300px) and (max-width: 700px) {
 
-    .personal-training-container, .nutritional-plans-container, .services-info-container{
+    .personal-training-container, .nutritional-plans-container{
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         margin-bottom: 50px;
-        text-align: center;
 
         .tythetrainer-widget{
             margin-bottom: 50px;
@@ -69,9 +68,10 @@
     }
 
     .services-info-container{
-        img{
-            margin-bottom: 40px;
-        }
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin: 10% 5% 16% 0;
     }
 
 
